--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
 <!-- نقشه ذهنی چیست؟ نقشه ذهنی، نموداری درختی است که برای بیان کردن کلمات، ایدهها، فعالیتها یا موارد دیگر مربوط به یک کلید واژه یا
 ایده مورد استفاده قرار میگیرد. این نمودار برای تولید، سازماندهی و ساختار دهی ایدهها و افکار به کار بسته میشود و در حل مسئله، فرایند
 تصمیم گیری و نوشتن میتواند مورد استفاده قرار بگیرد. این تکنیک برای نشان دادن ایدهها، اطلاعات، یادداشتها و … به طریق دیاگرامهای
-درختی به کار میرود. استفاده از نمودارهای درختی از قرنها پیش وجود داشته است اما نخستین بار در دهه ۰۷ میلادی، روانشناس و
 برنامهسازی تلویزیونی تونی بوزان از واژه نقشه ذهنی )مایند مپ( برای معرفی گسترده آن استفاده کرد . نقشه ذهنی یکی از مواردی است که میتوانید از آن برای طراحی اینفوگرافیک استفاده کنید و از بهترین تکنیکها برای این کار به شمار میآید -->
 
 <body>
@@ -75,8 +74,10 @@
                 </div>
                 <div class="col-12 col-lg-6 mt-3 " dir="rtl">
                     <h2 class="h3 " style="font-size: 5vw;">لیسه ستارگان تمدن</h2>
-                    <p class="lead">نقشه ذهنی چیست؟ نقشه ذهنی، نموداری درختی است که برای بیان کردن کلمات،
-                        ایدهها،فعالیتها یا موارد دیگر مربوط به یک کلید واژه یا ایده مورد استفاده قرار میگیرد.</p>
+                    <p class="lead">.کوتاه ترین راه برای عبور از چالش های فعلی جامعه و رسیدن به توسعهٔ پایدار ، رشد کیفیت آموزشی است تا دانش آموزان را برای مسائل زندگی و موفقیت در قرن ۲۱ آماده کند
+
+#لیسه_ستارگان_تمدن
+#آموزش_برای_زندگی_سالم.</p>
                     <button class="btn btn-success ">بیشتر بخوانید...</button>
                     <button class="btn btn-outline-success">ارتباط با ما</button>
                 </div>
