--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 </div>
                 <div class="col-12 col-lg-6 mt-3 " dir="rtl">
                     <h2 class="h3 " style="font-size: 5vw;">لیسه ستارگان تمدن</h2>
-                    <p class="lead">.کوتاه ترین راه برای عبور از چالش های فعلی جامعه و رسیدن به توسعهٔ پایدار ، رشد کیفیت آموزشی است تا دانش آموزان را برای مسائل زندگی و موفقیت در قرن ۲۱ آماده کند</p>
+                    <p class="lead">کوتاه ترین راه برای عبور از چالش های فعلی جامعه و رسیدن به توسعهٔ پایدار ، رشد کیفیت آموزشی است تا دانش آموزان را برای مسائل زندگی و موفقیت در قرن ۲۱ آماده کند</p>
                     <button class="btn btn-success ">بیشتر بخوانید...</button>
                     <button class="btn btn-outline-success">ارتباط با ما</button>
                 </div>
